After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727295 - src/browser.c:982: possible use of uninitialised local variable ?
src/browser.c:982: possible use of uninitialised local variable ?
Status: RESOLVED FIXED
Product: easytag
Classification: Other
Component: general
master
Other Linux
: Normal normal
: 2.1
Assigned To: EasyTAG maintainer(s)
EasyTAG maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-03-29 14:35 UTC by dcb
Modified: 2014-03-29 14:54 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description dcb 2014-03-29 14:35:01 UTC
I just compiled easytag with the clang compiler.

It said

src/browser.c:982:13: warning: variable 'fileETFile' is used uninitialized whenever 'if' condition is false [-Wsometimes-uninitialized]

Suggest initialise local variable fileETFile at its declaration.
Comment 1 David King 2014-03-29 14:54:55 UTC
Fixed in master as 47754d8f31f8711993dd6a730ef7c0eece6cac69.