Avoid a potentially-uninitialised variable

https://bugzilla.gnome.org/show_bug.cgi?id=727295